# azure-sphere-rtcore-audio

./: .gitmodules  CMakeLists.txt  Log_Debug.c  app_manifest.json  main.c
MT3620_M4_Driver/: LICENSE
